--- a/UPDATED BASE.html
+++ b/UPDATED BASE.html
@@ -246,7 +246,8 @@
 			/*MOBILE RESET STYLES*/
 			bullet { padding-right: 2px !important;}
             bulletHide { display: inline !important; max-height:none !important; padding-right: 2px;}
-			highlight { text-align: center !important; display: block !important; font-size: 14px !important; line-height: 20px !important; padding: 2px 50px 4px 50px !important;}
+			highlight { text-align: left !important; display: block !important; font-size: 14px !important; line-height: 20px !important; padding: 2px 50px 4px 50px !important;}
+            highlightIntro { text-align: left !important; display: block !important; font-size: 14px !important; line-height: 20px !important; padding: 2px 50px 4px 50px !important;}
 			.mobile-320 { width:320px!important; padding: 0 !important; }
 			.mobile-300 { width:300px!important;  padding: 0 !important; }
 			.mobile-280 { width:280px!important;  padding: 0 !important; }
@@ -269,10 +270,10 @@
 			.right-align { text-align: right !important; }
             .spacer {margin-bottom: 20px !important;}
 			/*TEXT RESIZERS*/
-			.h1-text-resize { font-size:4em !important; line-height:1 !important;}
+			.h1-text-resize { font-size:2.5em !important; line-height:1 !important;}
 			.h2-text-resize { font-size:20px !important; line-height:30px !important; margin: 10px !important;}
 			.h3-text-resize { font-size:20px !important; line-height:30px !important; }
-			.intro-text-resize { font-size:15.5px !important; line-height:28px !important; margin-left: 0px !important; margin-right: 0px !important; width: 260px !important; }
+			.intro-text-resize { font-size:14.25px !important; line-height:28px !important; margin-left: 0px !important; margin-right: 0px !important; width: 260px !important; }
             .footer-text-resize { font-size:12.5px !important; line-height:20px !important; }
             .footerButton {width: 120px !important;}
 			.small-text-resize { font-size:11px !important; line-height:14px !important; }
@@ -440,7 +441,7 @@
                                                 </p>
                                             </td>
                                             </tr>
-                                    <!-- SPACER BELOW SUBSCRIBER CHATTER --><tr><td height="30" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                                    <!-- SPACER BELOW SUBSCRIBER CHATTER --><tr><td height="60" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                     <!-- SUBSCRIBER ACTIVATE BUTTON -->
                                     <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
@@ -559,7 +560,7 @@
                         <!-- START FOOTER CONTACTS 400 -->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
                                 <tr>
-                                        <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:16px; font-weight: 500; text-align: center; text-wrap: balance; text-transform: uppercase; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility" class="small-text-resize">
+                                        <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:16px; font-weight: 500; text-align: center; text-wrap: balance; text-transform: uppercase; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; display: block !important;" class="small-text-resize">
                                             <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top" class="mobileOff hoverClicks"style="color:#242424; text-decoration: none;" id="none">&nbsp; Help &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
                                             <a rel="noopener" href="https://www.mlive.com/mlive_contacts/page/contact_home.html" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;">&nbsp; Contacts &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
                                             <a rel="noopener" href="https://www.mlive.com/printsubscription/faq/AA" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;" id="none">&nbsp; FAQs &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
