--- a/MIbaycity.html
+++ b/MIbaycity.html
@@ -117,8 +117,8 @@
 
                 178be3   (group color branding - Dark)
 			
-
 		/* CLIENT-SPECIFIC STYLES */
+        .bodyBox {background-image: url("https://media.sailthru.com/composer/images/bazh/wxt6ga5j/w60/hl7/nvh/ltbox.png");}
         .disappear {animation: disappearing 15s ease-in-out 1s infinite normal none;}
         @keyframes disappearing {0% {opacity: 1;} 50% {opacity: 0.1;}  80% {opacity: 0.1;}  100% {opacity: 1;} }
         .disappear2 {animation: disappearing2 15s ease-in-out 1s infinite normal none;}
@@ -361,33 +361,53 @@
 				<table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
                     <tr>
 			        <td align="center" valign="top">
-                        <!--SPACER--><tr><td height="40" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                        <tr>
-                            <td class="imgresize60 img" align="center" valign="top">
-                                <a rel="noopener" href="https://reader.bc.mlive.com" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/0xc/d2i/ykl/B_MID_rgb_MI_BayCity.png" width="300" style="margin:0; padding:0; border:none; display:block;" border="0" alt="The Bay City Times online logo" /></a>
-                            </td>
-                        </tr>
-                        <!--SPACER--><tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-			        </td>
+                        <!-- START LOGO FRAME-->
+                        <table class="mobile-320 bodyBox" role="presentation" width="400" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
+                            <tr>
+                                <td align="center" valign="top">
+                                    <!--SPACER--><tr><td height="40" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                                    <tr>
+                                        <td class="imgresize60 img" align="center" valign="top">
+                                            <a rel="noopener" href="https://reader.bc.mlive.com" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/0xc/d2i/ykl/B_MID_rgb_MI_BayCity.png" width="300" style="margin:0; padding:0; border:none; display:block;" border="0" alt="The Bay City Times online logo" /></a>
+                                        </td>
+                                    </tr>
+                                    <!--SPACER--><tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+			                    </td>
+                            </tr>
+                        </table>
+                        <!-- END LOGO FRAME -->
+                    </td>
                     </tr>
                 </table>
                 <!-- END LOGO -->
 
-                <!-- START HERO -->
+                <!-- START HERO BOX-->
                 <table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
-                        <tr>
-                            <td align="center" valign="top">
-                            <table class="mobile-320" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
-                                <tr>
-                                    <td align="center" class="imgresize80 img">
-                                        <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" class="disappear" border="0" alt="cover"/>
-                                    </td>
-                                </tr>
-                            </table>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td align="center" valign="top">
+                        <!-- START HERO FRAME-->
+                        <table class="mobile-320 bodyBox" role="presentation" width="400" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
+                            <tr>
+                                <td align="center" valign="top">
+                                    <!-- START HERO IMAGE-->
+                                    <table class="mobile-320" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
+                                        <tr>
+                                            <td align="center" class="imgresize80 img">
+                                                <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" class="disappear" border="0" alt="cover"/>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <!-- END HERO IMAGE-->
+                                </td>
+                            <!-- SPACER BELOW HERO -->
+                            <tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                            </tr>
+                        </table>
+                        <!-- END HERO FRAME-->
+                        </td>
+                    </tr>
                 </table>
-                <!-- END HERO -->
+                <!-- END HERO BOX-->
 
                 <!-- START MAIN HEADLINE -->
                 <table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
@@ -398,7 +418,7 @@
                             <tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                            <tr>
                            <td align="center" valign="top">
-                               <h1 class="h1-text-resize" style="font-family: lust, serif; font-weight: 700; font-style: normal; display: inline-block; font-size: 40px; line-height: 45px; letter-spacing: -0.25px; -webkit-font-smoothing: antialiased; font-kerning: normal; color: #1C1E22; mix-blend-mode: multiply"><z class="disappear2">Without</z> <z class="disappear">you,</z><br> the story ends.</h1>
+                            <h1 class="h1-text-resize" style="font-family: lust, serif; font-weight: 700; font-style: normal; display: inline-block; font-size: 40px; line-height: 45px; letter-spacing: -0.25px; -webkit-font-smoothing: antialiased; font-kerning: normal; color: #1C1E22;"><z class="disappear2">Without</z> <z class="disappear">you,</z><br> the story ends.</h1>
                            </td>
                            </tr>
                            <!-- SPACER BELOW HEADLINE -->
@@ -584,7 +604,7 @@
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="35" class="" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="15" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -612,7 +632,7 @@
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="12" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="55" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -623,6 +643,7 @@
                             <!-- END FOOTER RULE 400 ABOVE RIBBON--> 
                             <!-- START FOOTER LOGO BOX 400 -->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0" style="background-color:#46a6ff;" bgcolor="#46a6ff">
+                                <tr>
                                 <td align="center" valign="top">
                                 <!-- START FOOTER LOGO 200-->
                                     <table class="mobile-300" role="presentation" width="260" cellpadding="0" cellspacing="0" border="0">
@@ -683,7 +704,7 @@
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                             <!--SPACER MOBILE--><tr><td height="25" class="desktopOff mobileOn" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td></tr>
                                         </td>
                                         </tr>
                                     </table>
@@ -701,7 +722,7 @@
                                     </td>
                                     </tr>
                                     <!--SPACER--><tr><td height="20" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                </table>
+                            </table>
                             <!-- END FOOTER ADDRESS 400-->
                             <!-- START FOOTER QUESTIONS 400-->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0" style="background-color:#46a6ff;" bgcolor="#46a6ff">
@@ -721,14 +742,15 @@
                                     <table class="" role="presentation" width="170" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
                                         <td align="center" valign="top" width="75px" height="75px">
-                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Bay City Times" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/kgv/bjt/7hn/HELP_email_1.png" width="75px" height="75px" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px;  " class="helpButton imgresize70 img" alt="Email customercare@mlive.com"/></a>
+                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Bay City Times" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/kgv/bjt/7hn/HELP_email_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px;  " class="helpButton imgresize70 img" alt="Email customercare@mlive.com"/></a>
                                         </td>
                                         <td align="center" valign="top" width="75px" height="75px">
-                                            <a rel="noopener" href="tel:9896711201" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/swh/6in/jwc/HELP_phone_1.png" width="75px" height="75px" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px;  border-radius: 50px; " class="helpButton imgresize70 img" alt="Call 9896711201"/></a>
+                                            <a rel="noopener" href="tel:9896711201" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/swh/6in/jwc/HELP_phone_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px;  border-radius: 50px; " class="helpButton imgresize70 img" alt="Call 9896711201"/></a>
                                         </td>
                                         </tr>
                                     </table>
                                 </td>
+                                </tr>
                             </table>
                             <!-- END HELP BUTTONS  -->
                             <!-- START FOOTER QUESTIONS EXPLAINER 400-->
