--- a/UPDATED BASE.html
+++ b/UPDATED BASE.html
@@ -548,7 +548,7 @@
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="35" class="" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="15" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -578,7 +578,7 @@
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="12" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="55" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -589,6 +589,7 @@
                             <!-- END FOOTER RULE 400 ABOVE RIBBON--> 
                             <!-- START FOOTER LOGO BOX 400 -->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
+                                <tr>
                                 <td align="center" valign="top">
                                 <!-- START FOOTER LOGO 200-->
                                     <table class="mobile-300" role="presentation" width="260" cellpadding="0" cellspacing="0" border="0">
@@ -649,7 +650,7 @@
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                             <!--SPACER MOBILE--><tr><td height="25" class="desktopOff mobileOn" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td></tr>
                                         </td>
                                         </tr>
                                     </table>
@@ -687,14 +688,15 @@
                                     <table class="mobile-200" role="presentation" width="170" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
                                         <td align="right" valign="top">
-                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/kgv/bjt/7hn/HELP_email_1.png" width="75px" height="75px" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px;  " class="helpButton imgresize70 img" alt="Email customercare@mlive.com"/></a>
+                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/kgv/bjt/7hn/HELP_email_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px;  " class="helpButton imgresize70 img" alt="Email customercare@mlive.com"/></a>
                                         </td>
                                         <td align="center" valign="top">
-                                            <a rel="noopener" href="tel:7349264555" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/swh/6in/jwc/HELP_phone_1.png" width="75px" height="75px" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px;  border-radius: 50px; " class="helpButton imgresize70 img" alt="Call 7349264555"/></a>
+                                            <a rel="noopener" href="tel:7349264555" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/swh/6in/jwc/HELP_phone_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px;  border-radius: 50px; " class="helpButton imgresize70 img" alt="Call 7349264555"/></a>
                                         </td>
                                         </tr>
                                     </table>
                                 </td>
+                                </tr>
                             </table>
                             <!-- END HELP BUTTONS  -->
                             <!-- START FOOTER QUESTIONS EXPLAINER 400-->
