--- a/!BASEtemplate.html
+++ b/!BASEtemplate.html
@@ -130,8 +130,8 @@ Spring Spruce Up special section.
             242424   (footer text ALL - Dark)
 
 			
-
 		/* CLIENT-SPECIFIC STYLES */
+        .bodyBox {background-image: url("https://media.sailthru.com/composer/images/bazh/wxt6ga5j/w60/hl7/nvh/ltbox.png");}
         .disappear {animation: disappearing 15s ease-in-out 1s infinite normal none;}
         @keyframes disappearing {0% {opacity: 1;} 50% {opacity: 0.1;}  80% {opacity: 0.1;}  100% {opacity: 1;} }
         .disappear2 {animation: disappearing2 15s ease-in-out 1s infinite normal none;}
@@ -375,33 +375,53 @@ Spring Spruce Up special section.
 				<table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
                     <tr>
 			        <td align="center" valign="top">
-                        <!--SPACER--><tr><td height="40" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                        <tr>
-                            <td class="imgresize60 img" align="center" valign="top">
-                                <a rel="noopener" href="https://SITEURL" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/5pk/tkj/b86/B_MID_rgb_NJ_Newark.png" width="300" style="margin:0; padding:0; border:none; display:block;" border="0" alt="SITENAME online logo" /></a>
-                            </td>
-                        </tr>
-                        <!--SPACER--><tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-			        </td>
+                        <!-- START LOGO FRAME-->
+                        <table class="mobile-320 bodyBox" role="presentation" width="400" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
+                            <tr>
+                                <td align="center" valign="top">
+                                    <!--SPACER--><tr><td height="40" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                                    <tr>
+                                        <td class="imgresize60 img" align="center" valign="top">
+                                            <a rel="noopener" href="https://SITEURL" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/5pk/tkj/b86/B_MID_rgb_NJ_Newark.png" width="300" style="margin:0; padding:0; border:none; display:block;" border="0" alt="SITENAME online logo" /></a>
+                                        </td>
+                                    </tr>
+                                    <!--SPACER--><tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+			                    </td>
+                            </tr>
+                        </table>
+                        <!-- END LOGO FRAME -->
+                    </td>
                     </tr>
                 </table>
                 <!-- END LOGO -->
 
-                <!-- START HERO -->
+                <!-- START HERO BOX-->
                 <table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
-                        <tr>
-                            <td align="center" valign="top">
-                            <table class="mobile-320" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
-                                <tr>
-                                    <td align="center" class="imgresize80 img">
-                                        <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" class="disappear" border="0" alt="cover"/>
-                                    </td>
-                                </tr>
-                            </table>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td align="center" valign="top">
+                        <!-- START HERO FRAME-->
+                        <table class="mobile-320 bodyBox" role="presentation" width="400" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
+                            <tr>
+                                <td align="center" valign="top">
+                                    <!-- START HERO IMAGE-->
+                                    <table class="mobile-320" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
+                                        <tr>
+                                            <td align="center" class="imgresize80 img">
+                                                <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" class="disappear" border="0" alt="cover"/>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <!-- END HERO IMAGE-->
+                                </td>
+                            <!-- SPACER BELOW HERO -->
+                            <tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                            </tr>
+                        </table>
+                        <!-- END HERO FRAME-->
+                        </td>
+                    </tr>
                 </table>
-                <!-- END HERO -->
+                <!-- END HERO BOX-->
 
                 <!-- START MAIN HEADLINE -->
                 <table class="mobile-320 inset" role="presentation" width="600" style="background-color:#e7e7e7;" bgcolor="#e7e7e7" cellpadding="0" cellspacing="0" border="0">
@@ -620,7 +640,7 @@ Spring Spruce Up special section.
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="35" class="" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="15" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -650,7 +670,7 @@ Spring Spruce Up special section.
                                         <tr>
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="12" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 0px; border-top: 1px solid #242424;"></td></tr>
                                             <!--SPACER--><tr><td height="55" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                         </td>
                                         </tr>
@@ -661,6 +681,7 @@ Spring Spruce Up special section.
                             <!-- END FOOTER RULE 400 ABOVE RIBBON--> 
                             <!-- START FOOTER LOGO BOX 400 -->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0" style="background-color:#45b5c0;" bgcolor="#45b5c0">
+                                <tr>
                                 <td align="center" valign="top">
                                 <!-- START FOOTER LOGO 200-->
                                     <table class="mobile-300" role="presentation" width="260" cellpadding="0" cellspacing="0" border="0">
@@ -721,7 +742,7 @@ Spring Spruce Up special section.
                                         <td align="center" valign="top">
                                             <!--SPACER--><tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                             <!--SPACER MOBILE--><tr><td height="25" class="desktopOff mobileOn" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
-                                            <td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td>
+                                            <tr><td width="100%" align="center"style="padding: 10px 0px 10px 0px; border-top: 1px solid #242424;"></td></tr>
                                         </td>
                                         </tr>
                                     </table>
@@ -768,6 +789,7 @@ Spring Spruce Up special section.
                                         </tr>
                                     </table>
                                 </td>
+                                </tr>
                             </table>
                             <!-- END HELP BUTTONS  -->
                             <!-- START FOOTER QUESTIONS EXPLAINER 400-->
