--- a/UPDATED BASE.html
+++ b/UPDATED BASE.html
@@ -137,10 +137,10 @@
         highlight:hover {color: #ffffff !important; -webkit-text-stroke: 0.75px rgb(255, 255, 255); text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000, 1px 1px 0 #000;}
         bullet { display: inline !important; max-height:none !important;  }
         bulletHide { width: 0px !important; display: none !important; }
-        .hoverFooterBttn:hover {-webkit-box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.20), 0px 0px 10px 16px rgba(0,0,0,0.10); box-shadow: 0px 0px 10px 7px rgba(0,0,0,0.20), 0px 0px 10px 16px rgba(0,0,0,0.10); transition: box-shadow 0.3s ease-in-out; }
-        .hoverFooterBttn {-webkit-box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px 0px rgba(0, 0, 0, 0); box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px 0px rgba(0, 0, 0, 0); transition: box-shadow 0.3s ease-in-out; }
-        .helpButton {filter: drop-shadow(0px 0px 0px transparent) !important; transition: filter  0.3s ease-in-out;}
-        :hover.helpButton {filter: drop-shadow(0px 0px 6px #000000a1) !important; transition: filter 0.3s ease-in-out;}
+        .helpButton {  transition: all 0.2s ease-in-out;  border-radius: 150px; box-shadow:  0px 0px 0px rgba(255, 255, 255, 0.24), 0px 0px 0px rgba(255, 255, 255, 0.54);}
+        :hover.helpButton {border-radius: 150px; box-shadow:  6px 6px 32px rgba(255, 255, 255, 0.24), -6px -6px 22px rgba(255, 255, 255, 0.74);}
+        .hoverFooterBttn {  transition: all 0.2s ease-in-out;  border-radius: 150px; box-shadow:  0px 0px 0px rgba(255, 255, 255, 0.24), 0px 0px 0px rgba(255, 255, 255, 0.54);}
+        :hover.hoverFooterBttn {border-radius: 150px; box-shadow:  6px 6px 32px rgba(255, 255, 255, 0.24), -6px -6px 22px rgba(255, 255, 255, 0.74);}
         accentSite {color: #46a6ff !important}
 		/* RESET STYLES */
 		img { border: 0; outline: none; text-decoration: none; }
@@ -536,7 +536,7 @@
     <table class="mobile-320 body" role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color:#175499;" bgcolor="#175499">
 		<tr>
 			<td align="center" valign="top">
-                <!-- START FOOTER MAIN 600-->
+                <!-- START FOOTER MAIN TOP 600-->
 				<table class="mobile-320 inset" role="presentation" width="600" cellpadding="0" cellspacing="0" border="0" style="background-color:#46a6ff;" bgcolor="#46a6ff">
                     <tr>
 						<td align="center" valign="top">
@@ -556,21 +556,25 @@
                                 </td>
                                 </tr>
                             </table>
-                            <!-- END FOOTER RULE 400 ABOVE RIBBON--> 
+                        <!-- END FOOTER RULE 400 ABOVE RIBBON--> 
                         <!-- START FOOTER CONTACTS 400 -->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
-                                <tr>
-                                        <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:16px; font-weight: 500; text-align: center; text-wrap: balance; text-transform: uppercase; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; display: block !important;" class="small-text-resize">
-                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top" class="mobileOff hoverClicks"style="color:#242424; text-decoration: none;" id="none">&nbsp; Help &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
-                                            <a rel="noopener" href="https://www.mlive.com/mlive_contacts/page/contact_home.html" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;">&nbsp; Contacts &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
-                                            <a rel="noopener" href="https://www.mlive.com/printsubscription/faq/AA" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;" id="none">&nbsp; FAQs &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
-                                            <a rel="noopener" href="https://www.mlive.com/privacy-policy/" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;">&nbsp; Privacy &nbsp;</a><div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
-                                            <a rel="noopener" href="https://myaccount.mlive.com" target="_blank" class="hoverClicks " style="color:#242424; text-decoration: none;">&nbsp; Account &nbsp;</a> 
-                                        </td> 
-                                </tr>   
-                            </table>
-                            <!-- END FOOTER CONTACTS 400-->
-                            <!-- START FOOTER RULE 400 BELOW RIBBON-->
+                            <tr>
+                                <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:16px; font-weight: 500; text-align: center; text-wrap: balance; text-transform: uppercase; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; display: block !important;" class="small-text-resize">
+                                    <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top" class="mobileOff hoverClicks"style="color:#242424; text-decoration: none;" id="none">&nbsp; Help &nbsp;</a>
+                                    <div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
+                                    <a rel="noopener" href="https://www.mlive.com/mlive_contacts/page/contact_home.html" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;">&nbsp; Contacts &nbsp;</a>
+                                    <div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
+                                    <a rel="noopener" href="https://www.mlive.com/printsubscription/faq/AA" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;" id="none">&nbsp; FAQs &nbsp;</a>
+                                    <div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
+                                    <a rel="noopener" href="https://www.mlive.com/privacy-policy/" target="_blank" class="hoverClicks "style="color:#242424; text-decoration: none;">&nbsp; Privacy &nbsp;</a>
+                                    <div style="display: inline; color: #178be3;"class="mobileOff hoverRule" id="none"> &nbsp;|&nbsp; </div>
+                                    <a rel="noopener" href="https://myaccount.mlive.com" target="_blank" class="hoverClicks " style="color:#242424; text-decoration: none;">&nbsp; Account &nbsp;</a> 
+                                </td> 
+                            </tr>   
+                        </table>
+                        <!-- END FOOTER CONTACTS 400-->
+                        <!-- START FOOTER RULE 400 BELOW RIBBON-->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
                                 <tr>
                                 <td align="center" valign="top">
@@ -606,7 +610,7 @@
                                 </td>
                                 </tr>
                             </table>
-                        <!-- END FOOTER LOGO BOX 400 -->   
+                            <!-- END FOOTER LOGO BOX 400 -->   
 
                     <!-- START APP SECTION-->                           
                             <!-- START APP PROMPT-->
@@ -624,14 +628,14 @@
 	                    <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
                             <tr>
                                 <td align="center" valign="top">
-                                    <table class="mobile-200" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
+                                    <table class="mobile-200" role="presentation" width="310" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
-                                            <td class="stack center-align spacer" align="left" valign="top" width="140" height="auto">                       
-                                                    <a rel="noopener" href="https://apps.apple.com/us/app/the-ann-arbor-news/id792731951" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/uq9/g84/1wd/APP_Apple.png" width="140" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#777777; background:#3F3F3F; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border: 1px solid #3F3F3F;" class="footerButton hoverFooterBttn center-align" alt="Apple App Store button"/></a>
+                                            <td class="stack center-align spacer" align="left" valign="top">                       
+                                                    <a rel="noopener" href="https://apps.apple.com/us/app/the-ann-arbor-news/id792731951" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/uq9/g84/1wd/APP_Apple.png" width="150" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#777777; background:#3F3F3F; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;" class="footerButton hoverFooterBttn center-align" alt="Apple App Store button"/></a>
                                             </td>
-                                            <td class="stack" width="20px" align="center" valign="top" style="font-size: 0px; line-height: 0px;">&nbsp;</td>
-                                            <td class="stack center-align spacer" align="right" valign="top" width="140" height="auto">
-                                                    <a rel="noopener" href="https://play.google.com/store/apps/details?id=com.advancelocal.annarbor" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/qp3/u0b/gvp/APP_Google.png" width="140" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#777777; background:#3F3F3F; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border: 1px solid #3F3F3F;" class="footerButton hoverFooterBttn center-align" alt="Google Play button"/></a>
+                                            <td class="stack" width="10" style="font-size:10px; line-height:1;">&nbsp;</td>
+                                            <td class="stack center-align spacer" align="right" valign="top">
+                                                    <a rel="noopener" href="https://play.google.com/store/apps/details?id=com.advancelocal.annarbor" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/qp3/u0b/gvp/APP_Google.png" width="150" style="display:block; text-decoration:none; text-align:center; font-size:12px; color:#777777; background:#3F3F3F; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;" class="footerButton hoverFooterBttn center-align" alt="Google Play button"/></a>
                                             </td>
                                         </tr>
                                     </table>
@@ -674,11 +678,10 @@
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
                                 <tr>
                                 <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:16px; font-weight: 400; text-align: center; text-wrap: balance; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility">
-                                    <p style="font-weight: 900; text-transform: uppercase;display: inline;">Questions? </p> 
-                                    <p style="text-transform: uppercase; display: inline;"> Call or email</p> 
-                                    <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                                    <p style="text-transform: uppercase; display: inline;"><strong>Questions?</strong> Call or email</p> 
                                 </td>
                                 </tr>
+                                <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                             </table>
                         <!-- END FOOTER QUESTIONS 400-->
                         <!-- START HELP BUTTONS  -->
@@ -688,12 +691,16 @@
                                     <table class="mobile-200" role="presentation" width="170" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
                                         <td align="right" valign="top">
-                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/kgv/bjt/7hn/HELP_email_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px;  " class="helpButton imgresize70 img" alt="Email customercare@mlive.com"/></a>
+                                            <a rel="noopener" href="mailto:customercare@mlive.com?subject=Please%20help%20me with%20The Ann Arbor News" target="_top"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/cue/vn5/f8d/HELP_email_2.png" width="60px" height="60px"  style="display:inline;" class="helpButton" alt="Email customercare@mlive.com"/></a>
                                         </td>
                                         <td align="center" valign="top">
-                                            <a rel="noopener" href="tel:7349264555" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/swh/6in/jwc/HELP_phone_1.png" width="75px" height="75px" style="display:inline; text-decoration:none; text-align:center; font-size:12px; color:#242424; background:transparent; mso-line-height-rule:exactly; -moz-border-radius: 50px; -webkit-border-radius: 50px;  border-radius: 50px; " class="helpButton imgresize70 img" alt="Call 7349264555"/></a>
+                                <!--SPACER--><td width="8" style="font-size:10px; line-height:1;">&nbsp;</td>
+                                        </td>
+                                        <td align="center" valign="top">
+                                            <a rel="noopener" href="tel:7349264555" target="_blank"><img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/p49/b69/d3l/HELP_phone_2.png" width="60px" height="60px"  style="display:inline;" class="helpButton" alt="Call 7349264555"/></a>
                                         </td>
                                         </tr>
+                                        <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                     </table>
                                 </td>
                                 </tr>
@@ -701,11 +708,10 @@
                             <!-- END HELP BUTTONS  -->
                             <!-- START FOOTER QUESTIONS EXPLAINER 400-->
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0"style="background-color:#46a6ff;" bgcolor="#46a6ff">
-                                <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                 <tr>
-                                <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:18px; font-weight: 400; text-align: center; text-wrap: balance; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility">
-                                    <p>Click to call <b>734-926-4555</b> or</p> 
-                                    <p>email <b>customercare@mlive.com</b>.</p> 
+                                <td width="100%" align="center" >
+                                    <p style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:12px; line-height:18px; font-weight: 400; text-align: center; text-wrap: balance; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility">Click to call <b>734-926-4555</b><br> or 
+                                    email <b>customercare@mlive.com</b>.</p> 
                                 </td>
                                 </tr>
                             </table>
@@ -715,9 +721,9 @@
                                 <tr>
                                 <td width="100%" align="center" style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; color:#242424; font-size:10px; line-height:16px; font-weight: 400; text-align: center; text-wrap: balance; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; font-style: italic;">
                                     <p>*not supported on all devices</p> 
-                                    <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                                 </td>
                                 </tr>
+                                <!--SPACER--><tr><td height="10" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                             </table>
                         <!-- END FOOTER QUESTIONS EXPLAINER 400-->
                             <!-- START FOOTER COPYRIGHT 400-->
@@ -732,6 +738,7 @@
                             </table>
                         <!-- END FOOTER COPYRIGHT 400-->
                         </td>
+                    </tr>
                 </table>
                 <!-- END FOOTER MAIN 600-->
             </td>
