--- a/MIbaycity.html
+++ b/MIbaycity.html
@@ -119,10 +119,6 @@
 			
 		/* CLIENT-SPECIFIC STYLES */
         .bodyBox {background-image: url("https://media.sailthru.com/composer/images/bazh/wxt6ga5j/w60/hl7/nvh/ltbox.png");}
-        .disappear {animation: disappearing 15s ease-in-out 1s infinite normal none;}
-        @keyframes disappearing {0% {opacity: 1;} 50% {opacity: 0.1;}  80% {opacity: 0.1;}  100% {opacity: 1;} }
-        .disappear2 {animation: disappearing2 15s ease-in-out 1s infinite normal none;}
-        @keyframes disappearing2 {10% {opacity: 1;} 50% {opacity: 0.1;} 80% {opacity: 0.1;}  100% {opacity: 1;} }
 		body, table, td, a, p { -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 		table, td { mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
 		img { -ms-interpolation-mode: bicubic; }
@@ -393,7 +389,7 @@
                                     <table class="mobile-320" role="presentation" width="300" cellpadding="0" cellspacing="0" border="0">
                                         <tr>
                                             <td align="center" class="imgresize80 img">
-                                                <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" class="disappear" border="0" alt="cover"/>
+                                                <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/r4e/ksr/0vn/JournalismIllo.png" width="100%" height="auto" style="margin:0; padding:0; border:none;" border="0" alt="cover"/>
                                             </td>
                                         </tr>
                                     </table>
@@ -415,10 +411,10 @@
                        <td align="center" valign="top">
                        <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0">
                             <!-- SPACER ABOVE HEADLINE -->
-                            <tr><td height="50" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
+                            <tr><td height="25" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
                            <tr>
                            <td align="center" valign="top">
-                            <h1 class="h1-text-resize" style="font-family: 'farnham headline', Georgia, serif; font-weight: 600; font-style: normal; display: inline-block; font-size: 40px; line-height: 45px; letter-spacing: -0.25px; -webkit-font-smoothing: antialiased; font-kerning: normal; color: #1C1E22;"><z class="disappear2">Without</z> <z class="disappear">you,</z><br> the story ends.</h1>
+                            <h1 class="h1-text-resize" style="font-family: 'farnham headline', Georgia, serif; font-weight: 600; font-style: normal; display: inline-block; font-size: 40px; line-height: 45px; letter-spacing: -0.25px; -webkit-font-smoothing: antialiased; font-kerning: normal; color: #1C1E22;">Without you,<br> the story ends.</h1>
                            </td>
                            </tr>
                            <!-- SPACER BELOW HEADLINE -->
