--- a/PAharrisburg.html
+++ b/PAharrisburg.html
@@ -462,7 +462,7 @@
                     <tr>
                         <td align="center" valign="top">
                             <h2 style="display: inline-block; font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; text-align: center; font-weight: 900; text-transform: uppercase; letter-spacing: 1px; text-wrap: balance; color: #1C1E22;"> 
-                                <span>Subscribe & Support.</span>
+                                <span>YOUR SUPPORT.</span>
                             </h2>
                         </td>
                     </tr>
@@ -473,7 +473,7 @@
                             <table class="mobile-320" role="presentation" width="400" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td align="center" valign="top">
-                                        <p class="intro-text-resize" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 24px; color: #1C1E22; text-wrap: balance;"><strong>As a reader-funded newsroom,</strong> we rely on subscribers to support and sustain reliable and responsible local journalism. Consider subscribing to the online newspaper for updated local news,investigative stories, and special sections not available in print.</p>
+                                        <p class="intro-text-resize" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 24px; color: #1C1E22; text-wrap: balance;"><strong>As a reader-funded newsroom,</strong> we rely on subscribers to support and sustain reliable and responsible local journalism. Thank you for supporting the online newspaper for updated local news,investigative stories, and special sections not available in print.</p>
                                     </td>
                                 </tr>
                                 <!-- SPACER --><tr><td height="30" style="font-size:10px; line-height:1;">&nbsp;</td></tr>
@@ -486,7 +486,7 @@
                             <table class="mobile-200" role="presentation" width="200" cellpadding="0" cellspacing="0" border="0">
                                 <tbody>
                                     <tr>
-                                        <td align="center"><a href="subscribe.pennlive.com" target="_blank" class="button"  style="padding:9px 4px; min-width:86px; display:block; text-decoration:none; text-align:center; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; letter-spacing: 0.5px; font-size:12px; color:#121212; background:#e7e7e7; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border: 2px solid #121212;">Subscribe!</a></td>
+                                        <td align="center"><a href="https://reader.pn.pennlive.com" target="_blank" class="button"  style="padding:9px 4px; min-width:86px; display:block; text-decoration:none; text-align:center; font-family: Helvetica, Arial, sans-serif; text-transform: uppercase; letter-spacing: 0.5px; font-size:12px; color:#121212; background:#e7e7e7; mso-line-height-rule:exactly; line-height:22px; font-weight: bold; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; border: 2px solid #121212;">Explore!</a></td>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -517,7 +517,7 @@
                     <tr>
                         <td align="center" valign="top">
                             <h2 class="mobile-300" style="display: inline-block; font-family:'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; text-align: center; font-weight: 900; text-transform: uppercase; letter-spacing: 1px; text-wrap: balance; color: #1C1E22;"> 
-                                <span>Already a subscriber?</span>
+                                <span>Not activated?</span>
                             </h2>
                         </td>
                     </tr>
