--- a/NYstatenisland.html
+++ b/NYstatenisland.html
@@ -450,7 +450,7 @@
                             <table class="mobile-200" role="presentation" width="200" cellpadding="0" cellspacing="0" border="0">
                                 <tr>
                                     <td align="center" valign="top">
-                                        <img src="assets/INTRO NY SIA light.gif" width="200" height="160" style="margin:0; padding:0; border:none; display:block;" border="0" alt="On mobile, desktop & tablet">
+                                        <img src="https://media.sailthru.com/composer/images/bazh/wxt6ga5j/9ec/wyq/n0s/INTRO%20NY%20SIA%20light.gif" width="200" height="160" style="margin:0; padding:0; border:none; display:block;" border="0" alt="On mobile, desktop & tablet">
                                         <hr width="200" style="padding: 0%; margin: 0%; " color="#1C1E22" size="1px"/>
                                     </td>
                                 </tr>
